--- a/management/test.html
+++ b/management/test.html
@@ -93,9 +93,9 @@
         </header>
 
         <div class="content-wrapper container">
-          <div class="page-heading">
-            <p>Nhà máy VLXD</p>
-          </div>
+          <li class="breadcrumb-item active" aria-current="page">
+            <h6 class="card-title pl-1" style="padding: 0 !important;">NHÀ MÁY VLXD</h6>
+          </li>
           <div class="page-content">
             <section class="row">
               <div class="col-12 col-lg-6">
@@ -110,141 +110,112 @@
                     </div>
                   </div>
               </div>
-              <div class="col-12 col-lg-6">
+              <div class="col-12 col-lg-6 ">
                 <div class="row">
-                  <div class="col-12" style="display: flex;">
-                      <div class=" col-12 col-lg-4">
-                        <img style="display: block; width: 100%;" src="./assets/img/test4.png" alt="">
-                      </div>
-                      <div class="col-12 col-lg-8">
-                        <div class="table-responsive">
-                          <table class="table table-bordered mb-0">
-                              <thead>
-                                  <tr>
-                                      <th>NAME</th>
-                                      <th>RATE</th>
-                                      <th>SKILL</th>
-                                      <th>TYPE</th>
-                                      <th>LOCATION</th>
-                                  </tr>
-                              </thead>
-                              <tbody>
-                                  <tr>
-                                      <td class="text-bold-500">Michael Right</td>
-                                      <td>$15/hr</td>
-                                      <td class="text-bold-500">UI/UX</td>
-                                      <td>Remote</td>
-                                      <td>Austin,Taxes</td>
-                                  </tr>
-                                  <tr>
-                                      <td class="text-bold-500">Morgan Vanblum</td>
-                                      <td>$13/hr</td>
-                                      <td class="text-bold-500">Graphic concepts</td>
-                                      <td>Remote</td>
-                                      <td>Shangai,China</td>
-                                  </tr>
-                                  <tr>
-                                      <td class="text-bold-500">Tiffani Blogz</td>
-                                      <td>$15/hr</td>
-                                      <td class="text-bold-500">Animation</td>
-                                      <td>Remote</td>
-                                      <td>Austin,Texas</td>
-                                  </tr>
-                                  <tr>
-                                      <td class="text-bold-500">Ashley Boul</td>
-                                      <td>$15/hr</td>
-                                      <td class="text-bold-500">Animation</td>
-                                      <td>Remote</td>
-                                      <td>Austin,Texas</td>
-                                  </tr>
-                                  <tr>
-                                      <td class="text-bold-500">Mikkey Mice</td>
-                                      <td>$15/hr</td>
-                                      <td class="text-bold-500">Animation</td>
-                                      <td>Remote</td>
-                                      <td>Austin,Texas</td>
-                                  </tr>
-                              </tbody>
-                          </table>
-                      </div>
-                      </div>
+                  <div class="col-12">
+                    <div class="card">
+                      <h6 class="card-title pl-1">NHÀ MÁY VLXD</h6>
+                    <div class="col-12" style="display: flex !important; justify-content: space-between; flex-direction: row; padding: 5px">
+                      <div class="col-4">
+                          <img style="display: block; width: 100%;" src="./assets/img/test4.png" alt="">
+                        </div>
+                        <div class="col-8">
+                            <div class="table-responsive">
+                              <table class="table table-bordered mb-0 " style="text-align: center;">
+                                  <thead>
+                                      <tr>
+                                          <th></th>
+                                          <th>Dây cáp điện</th>
+                                      </tr>
+                                  </thead>
+                                  <tbody>
+                                      <tr>
+                                          <td class="text-bold-500">Cỡ dây</td>
+                                          <td>2x2.5mm</td>
+                                      </tr>
+                                      <tr>
+                                          <td class="text-bold-500"> Số lõi</td>
+                                          <td>3</td>
+                                      </tr>
+                                      <tr>
+                                          <td class="text-bold-500"> Iđm</td>
+                                          <td> 200A</td>
+                                      </tr>
+                                      <tr>
+                                          <td class="text-bold-500">Độ dài</td>
+                                          <td> 65m</td>
+                                      </tr>
+                                      <tr>
+                                          <td class="text-bold-500">Hãng</td>
+                                          <td>CADIVI</td>
+                                      </tr>
+                                  </tbody>
+                              </table>
+                          </div>
+                        </div>
+                    </div>
+                    </div>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-12">
-                    <div class="table-responsive">
-                      <table class="table table-bordered mb-0">
-                          <thead>
-                              <tr>
-                                  <th>NAME</th>
-                                  <th>RATE</th>
-                                  <th>SKILL</th>
-                                  <th>TYPE</th>
-                                  <th>LOCATION</th>
-                                  <th>ACTION</th>
-                              </tr>
-                          </thead>
-                          <tbody>
-                              <tr>
-                                  <td class="text-bold-500">Michael Right</td>
-                                  <td>$15/hr</td>
-                                  <td class="text-bold-500">UI/UX</td>
-                                  <td>Remote</td>
-                                  <td>Austin,Taxes</td>
-                                  <td><a href="#"><i
-                                              class="badge-circle badge-circle-light-secondary font-medium-1"
-                                              data-feather="mail"></i></a></td>
-                              </tr>
-                              <tr>
-                                  <td class="text-bold-500">Morgan Vanblum</td>
-                                  <td>$13/hr</td>
-                                  <td class="text-bold-500">Graphic concepts</td>
-                                  <td>Remote</td>
-                                  <td>Shangai,China</td>
-                                  <td><a href="#"><i
-                                              class="badge-circle badge-circle-light-secondary font-medium-1"
-                                              data-feather="mail"></i></a></td>
-                              </tr>
-                              <tr>
-                                  <td class="text-bold-500">Tiffani Blogz</td>
-                                  <td>$15/hr</td>
-                                  <td class="text-bold-500">Animation</td>
-                                  <td>Remote</td>
-                                  <td>Austin,Texas</td>
-                                  <td><a href="#"><i
-                                              class="badge-circle badge-circle-light-secondary font-medium-1"
-                                              data-feather="mail"></i></a></td>
-                              </tr>
-                              <tr>
-                                  <td class="text-bold-500">Ashley Boul</td>
-                                  <td>$15/hr</td>
-                                  <td class="text-bold-500">Animation</td>
-                                  <td>Remote</td>
-                                  <td>Austin,Texas</td>
-                                  <td><a href="#"><i
-                                              class="badge-circle badge-circle-light-secondary font-medium-1"
-                                              data-feather="mail"></i></a></td>
-                              </tr>
-                              <tr>
-                                  <td class="text-bold-500">Mikkey Mice</td>
-                                  <td>$15/hr</td>
-                                  <td class="text-bold-500">Animation</td>
-                                  <td>Remote</td>
-                                  <td>Austin,Texas</td>
-                                  <td><a href="#"><i
-                                              class="badge-circle badge-circle-light-secondary font-medium-1"
-                                              data-feather="mail"></i></a></td>
-                              </tr>
-                          </tbody>
-                      </table>
-                  </div>
+                    <div class="card">
+                      <div class="table-responsive" >
+                        <table class="table table-bordered mb-0" style="text-align: center;">
+                            <thead>
+                                <tr>
+                                    <th></th>
+                                    <th>Pha A</th>
+                                    <th>Pha B</th>
+                                    <th>Pha C</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class="text-bold-500">U</td>
+                                    <td>220.3</td>
+                                    <td class="text-bold-500">220.3</td>
+                                    <td>220.3</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-bold-500">I</td>
+                                    <td>845</td>
+                                    <td class="text-bold-500">896</td>
+                                    <td>856</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-bold-500">P</td>
+                                    <td>230</td>
+                                    <td class="text-bold-500">245</td>
+                                    <td>289</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-bold-500">Pf</td>
+                                    <td>0.96</td>
+                                    <td class="text-bold-500">0.93</td>
+                                    <td>0.95</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-bold-500">Q</td>
+                                    <td>-</td>
+                                    <td class="text-bold-500">-</td>
+                                    <td>-</td>
+                                </tr>
+                                <tr>
+                                  <td class="text-bold-500">T</td>
+                                  <td colspan="3">55*C</td>
+                                </tr>
+                                <tr>
+                                 <td class="text-bold-500">Pre</td>
+                                 <td colspan="3">50.1 Hz</td>
+                               </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    </div>
                   </div>
                 </div>
-                  <div class="card-body">
-                    <div id="chart-visitors-profile"></div>
-                  </div>
                 </div>
-              </div>
             </section>
           </div>
         </div>
