--- a/management/management.html
+++ b/management/management.html
@@ -94,7 +94,7 @@
 
         <div class="content-wrapper container">
           <div class="page-heading">
-            <p>Nhà máy VLXD</p>
+            <li class="breadcrumb-item active" aria-current="page">NHÀ MÁY VLXD</li>
           </div>
           <div class="page-content">
             <section class="row">
@@ -114,7 +114,7 @@
                 <div class="row">
                   <div class="col-12 description">
                     <div class="card">
-                      <h6>NHÀ MÁY VLXD</h6>
+                        <h6 class="card-title pl-1">NHÀ MÁY VLXD</h6>
                       <div id="heatmap-chart" style="height: 45vh; margin: -2.5vh 0 1vh;"></div>
                     </div>
                   </div>
@@ -122,26 +122,28 @@
                 <div class="row">
                   <div class="col-4">
                     <div class="card" id="Loadfactor">
-                        <h6>Load factor</h6>
+                      <div class="card-header">
+                        <h6 class="card-title pl-1">Load factor</h6>
+                    </div>
                       
                     </div>
                   </div>
                   <div class="col-4">
                     <div class="card" id="current">
-                        <h6>Current</h6>
+                      <div class="card-header">
+                        <h6 class="card-title pl-1">Current</h6>
+                    </div>
                     </div>
                   </div>
                   <div class="col-4">
                     <div class="card" id = "power">
-                        <h6>Power</h6>
+                        <div class="card-header">
+                          <h6 class="card-title pl-1">Power</h6>
+                      </div>
                     </div>
                   </div>
                 </div>
-                  <div class="card-body">
-                    <div id="chart-visitors-profile"></div>
-                  </div>
                 </div>
-              </div>
             </section>
           </div>
         </div>
