--- a/management/management.html
+++ b/management/management.html
@@ -103,7 +103,7 @@
                     <div class="col-12">
                       <div class="card">
                           <i class="fa-solid fa-compress"></i>
-                          <div class="d-flex align-items-center justify-content-center " id="diaSpace" style=" height: 80vh;margin-top: 2.5vh;">
+                          <div class="d-flex align-items-center justify-content-center " id="diaSpace" style=" height: 82vh;margin-top: 2.5vh;">
                             <div id="myholder"></div>
                           </div>
                       </div>
@@ -120,26 +120,28 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-4">
-                    <div class="card" id="Loadfactor">
+                  <div class="col-4 chart">
+                    <div class="card">
                       <div class="card-header">
                         <h6 class="card-title pl-1">Load factor</h6>
                     </div>
-                      
+                      <div id="Loadfactor"></div>
                     </div>
                   </div>
-                  <div class="col-4">
-                    <div class="card" id="current">
+                  <div class="col-4 chart">
+                    <div class="card">
                       <div class="card-header">
                         <h6 class="card-title pl-1">Current</h6>
                     </div>
+                    <div id="current"></div>
                     </div>
                   </div>
-                  <div class="col-4">
-                    <div class="card" id = "power">
+                  <div class="col-4 chart">
+                    <div class="card">
                         <div class="card-header">
                           <h6 class="card-title pl-1">Power</h6>
                       </div>
+                      <div id="power"></div>
                     </div>
                   </div>
                 </div>
@@ -155,7 +157,7 @@
     <script src="./assets/js/app.js"></script>
     <script src="./assets/js/element.js"></script>
     <script src="./assets/js/management.js"></script>
-    <script src="./assets/js/heatmap.js"></script>
+    <script src="./assets/js/chart.js"></script>
     <script src="./assets/js/api.js"></script>
     <script src="./assets/js/diagram.js"></script>
   </body>
