--- a/management/test.html
+++ b/management/test.html
@@ -97,14 +97,14 @@
             <h6 class="card-title pl-1" style="padding: 0 !important;">NHÀ MÁY VLXD</h6>
           </li>
           <div class="page-content">
-            <section class="row">
-              <div class="col-12 col-lg-6">
+            <section class="row" style="height: 85vh; margin-bottom: 5vh !important">
+              <div class="col-12 col-lg-6 card">
                   <div class="row">
                     <div class="col-12">
                       <div class="card">
                           <i class="fa-solid fa-compress"></i>
                           <div class="d-flex align-items-center justify-content-center " id="diaSpace" style=" height: 80vh;margin-top: 2.5vh;">
-                            <div id="myholder"></div>
+                            <img src="./assets/img/test5.png" alt="" style="width: 100%;">
                           </div>
                       </div>
                     </div>
@@ -115,39 +115,39 @@
                   <div class="col-12">
                     <div class="card">
                       <h6 class="card-title pl-1">NHÀ MÁY VLXD</h6>
-                    <div class="col-12" style="display: flex !important; justify-content: space-between; flex-direction: row; padding: 5px">
+                    <div class="col-12 table-block">
                       <div class="col-4">
                           <img style="display: block; width: 100%;" src="./assets/img/test4.png" alt="">
                         </div>
                         <div class="col-8">
                             <div class="table-responsive">
-                              <table class="table table-bordered mb-0 " style="text-align: center;">
+                              <table class="table table-bordered table-striped mb-0 " style="text-align: center;">
                                   <thead>
                                       <tr>
                                           <th></th>
-                                          <th>Dây cáp điện</th>
+                                          <th>Máy biến áp</th>
                                       </tr>
                                   </thead>
                                   <tbody>
                                       <tr>
-                                          <td class="text-bold-500">Cỡ dây</td>
-                                          <td>2x2.5mm</td>
+                                          <td class="text-bold-500">Tỉ số</td>
+                                          <td>22kV/0.4kV</td>
                                       </tr>
                                       <tr>
-                                          <td class="text-bold-500"> Số lõi</td>
-                                          <td>3</td>
+                                          <td class="text-bold-500">Công suất</td>
+                                          <td>200kVA</td>
                                       </tr>
                                       <tr>
-                                          <td class="text-bold-500"> Iđm</td>
-                                          <td> 200A</td>
+                                          <td class="text-bold-500">Un</td>
+                                          <td>27V</td>
                                       </tr>
                                       <tr>
-                                          <td class="text-bold-500">Độ dài</td>
-                                          <td> 65m</td>
+                                          <td class="text-bold-500">Po</td>
+                                          <td>600W</td>
                                       </tr>
                                       <tr>
-                                          <td class="text-bold-500">Hãng</td>
-                                          <td>CADIVI</td>
+                                          <td class="text-bold-500">Pn</td>
+                                          <td>1200W</td>
                                       </tr>
                                   </tbody>
                               </table>
@@ -161,7 +161,7 @@
                   <div class="col-12">
                     <div class="card">
                       <div class="table-responsive" >
-                        <table class="table table-bordered mb-0" style="text-align: center;">
+                        <table class="table table-bordered table-striped mb-0" style="text-align: center;">
                             <thead>
                                 <tr>
                                     <th></th>
@@ -172,43 +172,51 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td class="text-bold-500">U</td>
+                                    <td style="font-weight: bold;">U</td>
                                     <td>220.3</td>
-                                    <td class="text-bold-500">220.3</td>
+                                    <td >220.3</td>
                                     <td>220.3</td>
                                 </tr>
                                 <tr>
-                                    <td class="text-bold-500">I</td>
+                                    <td style="font-weight: bold;">I</td>
                                     <td>845</td>
-                                    <td class="text-bold-500">896</td>
+                                    <td >896</td>
                                     <td>856</td>
                                 </tr>
                                 <tr>
-                                    <td class="text-bold-500">P</td>
+                                    <td style="font-weight: bold;">P</td>
                                     <td>230</td>
-                                    <td class="text-bold-500">245</td>
+                                    <td >245</td>
                                     <td>289</td>
                                 </tr>
                                 <tr>
-                                    <td class="text-bold-500">Pf</td>
+                                    <td style="font-weight: bold;">Pf</td>
                                     <td>0.96</td>
-                                    <td class="text-bold-500">0.93</td>
+                                    <td >0.93</td>
                                     <td>0.95</td>
                                 </tr>
                                 <tr>
-                                    <td class="text-bold-500">Q</td>
+                                    <td style="font-weight: bold;">Q</td>
                                     <td>-</td>
-                                    <td class="text-bold-500">-</td>
+                                    <td >-</td>
                                     <td>-</td>
                                 </tr>
                                 <tr>
-                                  <td class="text-bold-500">T</td>
+                                  <td style="font-weight: bold;">T</td>
                                   <td colspan="3">55*C</td>
                                 </tr>
                                 <tr>
-                                 <td class="text-bold-500">Pre</td>
+                                  <td style="font-weight: bold;">H</td>
+                                  <td colspan="3">97%</td>
+                                </tr>
+                                <tr>
+                                 <td style="font-weight: bold;">Pre</td>
                                  <td colspan="3">50.1 Hz</td>
                                </tr>
+                               <tr>
+                                <td style="font-weight: bold;">STATUS</td>
+                                <td colspan="3" style="background-color: #04d627;">OK</td>
+                              </tr>
                             </tbody>
                         </table>
                     </div>
