--- a/management/test2.html
+++ b/management/test2.html
@@ -104,38 +104,124 @@
                       <div class="card">
                           <i class="fa-solid fa-compress"></i>
                           <div class="d-flex align-items-center justify-content-center " id="diaSpace" style=" height: 80vh; overflow: hidden;">
-                            <div id="myholder"></div>
+                            <img src="./assets/img/test6.png" alt="" style="width: 100%;">
                           </div>
                       </div>
                     </div>
                   </div>
               </div>
-              <div class="col-12 col-lg-6" >
+              <div class="col-12 col-lg-6 ">
                 <div class="row">
-                  <div class="col-12 description">
+                  <div class="col-12">
                     <div class="card">
-                        <h6 class="card-title pl-1">NHÀ MÁY VLXD</h6>
-                      <div id="heatmap-chart" style="height: 45vh; margin: -2.5vh 0 1vh;"></div>
+                      <h6 class="card-title pl-1">NHÀ MÁY VLXD</h6>
+                    <div class="col-12 table-block">
+                      <div class="col-4 center">
+                          <img style="display: block; width: 90%; padding-left:10%" src="./assets/img/tesst7.png" alt="">
+                        </div>
+                        <div class="col-8">
+                            <div class="table-responsive">
+                              <table class="table table-bordered table-striped mb-0 " style="text-align: center;">
+                                  <thead>
+                                      <tr>
+                                          <th></th>
+                                          <th>Tủ điện</th>
+                                      </tr>
+                                  </thead>
+                                  <tbody>
+                                      <tr>
+                                          <td class="text-bold-500">Ptt</td>
+                                          <td>79kW</td>
+                                      </tr>
+                                      <tr>
+                                          <td class="text-bold-500"> Số lộ</td>
+                                          <td>11</td>
+                                      </tr>
+                                      <tr>
+                                          <td class="text-bold-500">Tên tủ</td>
+                                          <td>MĐV.1</td>
+                                      </tr>
+                                      <tr>
+                                          <td class="text-bold-500">Loại tải chính</td>
+                                          <td>Điều hoà</td>
+                                      </tr>
+                                      <tr>
+                                          <td class="text-bold-500">Hệ số đồng thời</td>
+                                          <td>0.6</td>
+                                      </tr>
+                                  </tbody>
+                              </table>
+                          </div>
+                        </div>
+                    </div>
                     </div>
                   </div>
                 </div>
-                <div class="row chart">
-                  <div class="col-4">
-                    <div class="card chart-item">
-                        <h6 class=" pl-1">Load factor</h6>
-                      <div id="Loadfactor" style="height: 20vh !important;"></div></div>
-                  </div>
-                  <div class="col-4">
-                    <div class="card chart-item">
-                        <h6 class="card-title pl-1">Current</h6>
-                    <div id="current" style="height: 20vh !important;"></div></div>
-                  </div>
-                  <div class="col-4">
-                    <div class="card chart-item">
-                          <h6 class="card-title pl-1">Power</h6>
-                      <div id="power" style="height: 20vh !important;"></div>
+                <div class="row">
+                  <div class="col-12">
+                    <div class="card">
+                      <div class="table-responsive" >
+                        <table class="table table-bordered table-striped mb-0" style="text-align: center;">
+                            <thead>
+                                <tr>
+                                    <th></th>
+                                    <th>Pha A</th>
+                                    <th>Pha B</th>
+                                    <th>Pha C</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td style="font-weight: bold;">U</td>
+                                    <td>220.3</td>
+                                    <td >220.3</td>
+                                    <td>220.3</td>
+                                </tr>
+                                <tr>
+                                    <td style="font-weight: bold;">I</td>
+                                    <td>845</td>
+                                    <td >896</td>
+                                    <td>856</td>
+                                </tr>
+                                <tr>
+                                    <td style="font-weight: bold;">P</td>
+                                    <td>230</td>
+                                    <td >245</td>
+                                    <td>289</td>
+                                </tr>
+                                <tr>
+                                    <td style="font-weight: bold;">Pf</td>
+                                    <td>0.96</td>
+                                    <td >0.93</td>
+                                    <td>0.95</td>
+                                </tr>
+                                <tr>
+                                    <td style="font-weight: bold;">Q</td>
+                                    <td>-</td>
+                                    <td >-</td>
+                                    <td>-</td>
+                                </tr>
+                                <tr>
+                                  <td style="font-weight: bold;">T</td>
+                                  <td colspan="3">55*C</td>
+                                </tr>
+                                <tr>
+                                  <td style="font-weight: bold;">H</td>
+                                  <td colspan="3">97%</td>
+                                </tr>
+                                <tr>
+                                 <td style="font-weight: bold;">Pre</td>
+                                 <td colspan="3">50.1 Hz</td>
+                               </tr>
+                               <tr>
+                                <td style="font-weight: bold;">STATUS</td>
+                                <td colspan="3" style="background-color: #04d627;">OK</td>
+                              </tr>
+                            </tbody>
+                        </table>
                     </div>
                     </div>
+                  </div>
                 </div>
                 </div>
             </section>
