--- a/management/test4.html
+++ b/management/test4.html
@@ -110,32 +110,111 @@
                     </div>
                   </div>
               </div>
-              <div class="col-12 col-lg-6" >
+              <div class="col-12 col-lg-6 ">
                 <div class="row">
-                  <div class="col-12 description">
+                  <div class="col-12">
                     <div class="card">
-                        <h6 class="card-title pl-1">NHÀ MÁY VLXD</h6>
-                      <div id="heatmap-chart" style="height: 45vh; margin: -2.5vh 0 1vh;"></div>
+                      <h6 class="card-title pl-1">NHÀ MÁY VLXD</h6>
+                    <div class="col-12 table-block">
+                        <div class="col-8">
+                            <div class="table-responsive">
+                              <table class="table table-bordered table-striped mb-0 " style="text-align: center;">
+                                  <thead>
+                                      <tr>
+                                          <th></th>
+                                          <th>TB đóng cắt</th>
+                                      </tr>
+                                  </thead>
+                                  <tbody>
+                                      <tr>
+                                          <td class="text-bold-500">Loại</td>
+                                          <td>MCCB</td>
+                                      </tr>
+                                      <tr>
+                                          <td class="text-bold-500">Iđm</td>
+                                          <td>1200A</td>
+                                      </tr>
+                                      <tr>
+                                          <td class="text-bold-500">In</td>
+                                          <td>85kA</td>
+                                      </tr>
+                                      <tr>
+                                          <td class="text-bold-500">Hãng</td>
+                                          <td>Huyndai</td>
+                                      </tr>
+                                      <tr>
+                                          <td class="text-bold-500">Dạng</td>
+                                          <td>1600AF</td>
+                                      </tr>
+                                  </tbody>
+                              </table>
+                          </div>
+                        </div>
+                      <div class="col-4 center">
+                          <img style="display: block; width: 90%; padding-left:5%" src="./assets/img/test9.png" alt="">
+                        </div>
+                    </div>
                     </div>
                   </div>
                 </div>
-                <div class="row chart">
-                  <div class="col-4">
-                    <div class="card chart-item">
-                        <h6 class=" pl-1">Load factor</h6>
-                      <div id="Loadfactor" style="height: 20vh !important;"></div></div>
-                  </div>
-                  <div class="col-4">
-                    <div class="card chart-item">
-                        <h6 class="card-title pl-1">Current</h6>
-                    <div id="current" style="height: 20vh !important;"></div></div>
-                  </div>
-                  <div class="col-4">
-                    <div class="card chart-item">
-                          <h6 class="card-title pl-1">Power</h6>
-                      <div id="power" style="height: 20vh !important;"></div>
+                <div class="row">
+                  <div class="col-12">
+                    <div class="card">
+                      <div class="table-responsive" >
+                        <table class="table table-bordered table-striped mb-0" style="text-align: center;">
+                            <thead>
+                                <tr>
+                                    <th></th>
+                                    <th>Pha A</th>
+                                    <th>Pha B</th>
+                                    <th>Pha C</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td style="font-weight: bold;">U</td>
+                                    <td>220.3</td>
+                                    <td >220.3</td>
+                                    <td>220.3</td>
+                                </tr>
+                                <tr>
+                                    <td style="font-weight: bold;">I</td>
+                                    <td>845</td>
+                                    <td >896</td>
+                                    <td>856</td>
+                                </tr>
+                                <tr>
+                                    <td style="font-weight: bold;">P</td>
+                                    <td>230</td>
+                                    <td >245</td>
+                                    <td>289</td>
+                                </tr>
+                                <tr>
+                                    <td style="font-weight: bold;">Pf</td>
+                                    <td>0.96</td>
+                                    <td >0.93</td>
+                                    <td>0.95</td>
+                                </tr>
+                                <tr>
+                                    <td style="font-weight: bold;">Q</td>
+                                    <td>-</td>
+                                    <td >-</td>
+                                    <td>-</td>
+                                </tr>
+                                <tr>
+                                  <td style="font-weight: bold;">T</td>
+                                  <td colspan="3">45*C</td>
+                                </tr>
+                                <tr>
+                                 <td style="font-weight: bold;">STT</td>
+                                 <td colspan="2">ON</td>
+                                 <td >OFF</td>
+                               </tr>
+                            </tbody>
+                        </table>
                     </div>
                     </div>
+                  </div>
                 </div>
                 </div>
             </section>
