--- a/management/2.html
+++ b/management/2.html
@@ -154,7 +154,6 @@
                           <div
                             class="buttons d-flex justify-content-end"
                             onclick="toggleFullscreen()"
-                            style="height: 7.5vh"
                           >
                             <a href="#" class="btn icon icon-left">
                               <i class="bi bi-arrows-angle-expand"></i
@@ -179,43 +178,6 @@
               <div class="col-12 col-lg-6 p-1">
                 <div class="card">
                   <div class="card-content">
-                    <div class="card-body pb-1">
-                      <h4
-                        id="heatmapname"
-                        class="card-title"
-                        style="height: 2.5vh"
-                      >
-                        Nhà Máy VLXD
-                      </h4>
-                    </div>
-                    <div class="card-body pb-1">
-                      <div class="row">
-                        <div class="col-12">
-                          <div
-                            id="heatmap-chart"
-                            style="height: 38vh; margin: -2.5vh 0 1vh"
-                          ></div>
-                        </div>
-                        <div class="col-4">
-                          <h5 class="card-title">Load factor</h5>
-                          <div id="c1" style="height: 28vh"></div>
-                        </div>
-                        <div class="col-4">
-                          <h5 class="card-title">Current</h5>
-
-                          <div id="c2" style="height: 28vh"></div>
-                        </div>
-                        <div class="col-4">
-                          <h5 class="card-title">Power</h5>
-
-                          <div id="c3" style="height: 28vh"></div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-content">
                     <div class="card-body">
                       <h4 id="heatmapname" class="card-title">Carousel</h4>
                     </div>
@@ -230,21 +192,21 @@
                             <div class="carousel-inner">
                               <div class="carousel-item active">
                                 <img
-                                  src="public/IMG/motorcycle.jpg"
+                                  src="public/IMG/1.png"
                                   class="d-block w-100"
                                   alt="..."
                                 />
                               </div>
                               <div class="carousel-item">
                                 <img
-                                  src="public/IMG/origami.jpg"
+                                  src="public/IMG/2.png"
                                   class="d-block w-100"
                                   alt="..."
                                 />
                               </div>
                               <div class="carousel-item">
                                 <img
-                                  src="public/IMG/water.jpg"
+                                  src="public/IMG/3.png"
                                   class="d-block w-100"
                                   alt="..."
                                 />
@@ -277,15 +239,6 @@
                           </div>
                         </div>
                         <div class="col-6">
-                          <p class="card-text">
-                            Welcome to our dynamic carousel, where innovation
-                            takes center stage. Take a captivating journey
-                            through our cutting-edge products, groundbreaking
-                            solutions, and the latest advancements in
-                            technology. Each slide invites you to discover
-                            something new and exciting, providing a glimpse into
-                            the future of innovation.
-                          </p>
                           <p class="card-text">
                             Welcome to our dynamic carousel, where innovation
                             takes center stage. Take a captivating journey
@@ -329,16 +282,7 @@
                               tabindex="-1"
                               >Thông số hoạt động</a
                             >
-                            <a
-                              class="nav-link"
-                              id="v-pills-messages-tab"
-                              data-bs-toggle="pill"
-                              href="#v-pills-messages"
-                              role="tab"
-                              aria-controls="v-pills-messages"
-                              aria-selected="true"
-                              >Đồ thị</a
-                            >
+
                             <a
                               class="nav-link"
                               id="v-pills-settings-tab"
@@ -546,26 +490,59 @@
                             </div>
                             <div
                               class="tab-pane fade"
-                              id="v-pills-messages"
-                              role="tabpanel"
-                              aria-labelledby="v-pills-messages-tab"
-                            >
-                              Integer pretium dolor at sapien laoreet ultricies.
-                              Fusce congue et lorem id convallis. Nulla volutpat
-                              tellus nec molestie finibus. In nec odio tincidunt
-                              eros finibus ullamcorper. Ut sodales, dui nec
-                              posuere finibus, nisl sem aliquam metus, eu
-                              accumsan lacus felis at odio.
-                            </div>
-                            <div
-                              class="tab-pane fade"
                               id="v-pills-settings"
                               role="tabpanel"
                               aria-labelledby="v-pills-settings-tab"
                             >
-                              Sed lacus quam, convallis quis condimentum ut,
-                              accumsan congue massa. Pellentesque et quam vel
-                              massa pretium ullamcorper vitae eu tortor.
+                              <div
+                                class="card-body d-flex flex-column col-lg-5"
+                              >
+                                <div
+                                  class="btn-group mb-3"
+                                  role="group"
+                                  aria-label="Basic example"
+                                >
+                                  <button type="button" class="btn btn-success">
+                                    ON
+                                  </button>
+                                  <button
+                                    type="button"
+                                    class="btn btn-secondary"
+                                  >
+                                    OFF
+                                  </button>
+                                </div>
+                                <div
+                                  class="btn-group mb-3"
+                                  role="group"
+                                  aria-label="Basic example"
+                                >
+                                  <button type="button" class="btn btn-success">
+                                    1 Pha
+                                  </button>
+                                  <button
+                                    type="button"
+                                    class="btn btn-secondary"
+                                  >
+                                    3 Pha
+                                  </button>
+                                </div>
+                                <div
+                                  class="btn-group mb-3"
+                                  role="group"
+                                  aria-label="Basic example"
+                                >
+                                  <button type="button" class="btn btn-success">
+                                    Tự động
+                                  </button>
+                                  <button
+                                    type="button"
+                                    class="btn btn-secondary"
+                                  >
+                                    Thủ công
+                                  </button>
+                                </div>
+                              </div>
                             </div>
                           </div>
                         </div>
@@ -731,9 +708,10 @@
 
     <script src="./assets/js/app.js"></script>
     <script src="./assets/js/element.js"></script>
-    <script src="./assets/js/management.js"></script>
     <script src="./assets/js/chart.js"></script>
     <script src="./assets/js/api.js"></script>
     <script src="./assets/js/diagram.js"></script>
+    <script src="./assets/js/control.js"></script>
+    <script src="./assets/js/management.js"></script>
   </body>
 </html>
